src/parser/snapshots/guitar_tab__parser__parser_tests__bend_to.snap
---
source: src/parser/parser_tests.rs
expression: "(string_buf, offsets)"
---
(
    [
        RawTick {
            element: Rest,
        },
        RawTick {
            element: Rest,
        },
        RawTick {
            element: FretBendTo(
                4,
                5,
            ),
        },
        RawTick {
            element: Rest,
        },
        RawTick {
            element: Rest,
        },
        RawTick {
            element: Fret(
                0,
            ),
        },
        RawTick {
            element: Rest,
        },
        RawTick {
            element: Rest,
        },
        RawTick {
            element: Fret(
                5,
            ),
        },
        RawTick {
            element: Rest,
        },
    ],
    [
        2,
        3,
        6,
        7,
        9,
        10,
        11,
        12,
        13,
        14,
    ],
)
